# Quant_demo

./: 000001.csv  4_16.py  4_7.py  README.md  Untitled.ipynb  Untitled2.ipynb  class.py  debug_demo.py  exception_demo.py  heart.py  homwork.ipynb  math_demo.ipynb  pdd.py  trade_object.py  typedemo.py
.ipynb_checkpoints/: 4_16demo-checkpoint.ipynb  doubleline-checkpoint.ipynb  homwork-checkpoint.ipynb
.vntrader/: connect_ctp.json
Crypto/: Untitled.ipynb  bitMartex.py  crypto_Util.py  cryptocoin_sample.csv  database.py  demotest.py  demotest1.py  example.py  final.py  final2.py  final3.py  final3.rar  gpt.py  iiiii.py  main.py  marketCry.py  new.py  ooo.py  pendOrder.py  websocket_client.py
Crypto/learn/bitget-rs/: Cargo.toml
Crypto/learn/bitget-rs/src/: constant.rs  lib.rs  main.rs  strings.rs
Crypto/learn/bitget-rs/src/api/: sdk.rs
Crypto/learn/bitget-rs/src/broker/: mod.rs
Crypto/learn/bitget-rs/src/broker/orderbook/: kucoin.rs  mod.rs
Crypto/learn/bitget-rs/src/event/: chance.rs  order.rs  orderbook.rs  trade.rs
Crypto/learn/bitget-rs/src/model/: chance.rs  order.rs  orderbook.rs  symbol.rs
Crypto/learn/bitget-rs/src/monitor/: conunter.rs  mod.rs  timer.rs
Crypto/learn/bitget-rs/src/strategy/: all_taker_btc_usd.rs
Crypto/learn/bitget-rs/src/translator/: mod.rs
PY/: 4_14.py  4_27.py  4_8.ipynb  5_2.py  Untitled.ipynb  _oss_demo.ipynb  cat.py  debug_demo.py  doubleline.ipynb  enum_demo.ipynb  homework.py  matplt.py  numpy.ipynb  path_demo.ipynb  run.ipynb  scilearn.py  test.py  uu.py
pandas/: pandas.py
work/: key.txt  mm-cs.pem  mm.pem  tt.py  (+2 more)
(+2 files in other folders)
